bin_PROGRAMS = simulator
simulator_SOURCES = src/controller.cpp src/databank.cpp src/disknode.cpp src/event.cpp \
src/loadbalancer.cpp src/pickleloader.cpp src/pyutils.cpp src/randomlb.cpp src/simulator.cpp
simulator_LDFLAGS = -lboost_python -lpython2.7
simulator_CXXFLAGS = -I./include -I/usr/include/ -std=c++11 -Wall
